src/test/testcases/errors/p2_public/task_4/matrix_err_3.ctx.mavl
function void main(){
    val matrix<int>[1][3] a = [[3], [3], [3]];
    // Structure dimension error
    val matrix<int>[1][3] b = a # a;
}
